--- a/sources/index.htm
+++ b/sources/index.htm
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="iso-8859-1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <title>Maxifoot</title>
 <meta name="description" content="Actualité du Football par Maxifoot. Le réseau du Foot sur Internet vous fait partager sa passion du ballon rond. Suivez les transferts, les resultats ainsi que nos analyses des matchs de ligue, coupe et championnat ou encore nos chroniques exclusives 100% FOOT. MAXIFOOT c'est tout le FOOTBALL sur internet !">
 <meta name="author" content="Maxifoot">
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" /><link rel="stylesheet" href="/css/mobile_all.css">
-<link rel="shortcut icon" href="/images/favicon.ico">
-<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+<link rel="stylesheet" href="css/mobile_all.css">
 <script>
 function hideTB() {
 	if(!window.pageYOffset){window.scrollTo(0,1);}
@@ -96,6 +87,6 @@ function _eStat_Whap_loaded_func(){
  s.parentNode.insertBefore(myscript,s);
 })();
 </script>
-<script type="text/javascript" src="http://m.maxifoot.fr/0_templates/javascript.js"></script>
+<script type="text/javascript" src="js/javascript.js"></script>
 </body>
 </html>
