--- a/sources/index.htm
+++ b/sources/index.htm
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<html>
 <head>
 <meta charset="iso-8859-1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <title>Maxifoot</title>
-<meta name="description" content="Actualité du Football par Maxifoot. Le réseau du Foot sur Internet vous fait partager sa passion du ballon rond. Suivez les transferts, les resultats ainsi que nos analyses des matchs de ligue, coupe et championnat ou encore nos chroniques exclusives 100% FOOT. MAXIFOOT c'est tout le FOOTBALL sur internet !">
-<meta name="author" content="Maxifoot">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-<link rel="stylesheet" href="css/mobile_all.css">
+<link rel="stylesheet" href="css/style.css">
 <script>
 function hideTB() {
 	if(!window.pageYOffset){window.scrollTo(0,1);}
