--- a/sources/index.htm
+++ b/sources/index.htm
@@ -21,7 +21,7 @@ function hideTB() {
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:999;">
 		<a href="/menu.htm" class="button menu">Menu</a>
 		<a href="javascript:window.location.reload()" class="button reload"><img src="/images/bt-reload2.png" width=14 height=18 alt="" /></a>
-		<a href="/" class="logo"><img id=logo1 src="/images/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
+		<a href="/" class="logo"><img id=logo1 src="jembedocs/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:999; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="/">La Une</a></li>
@@ -32,17 +32,6 @@ function hideTB() {
 	</ul>
 <div id="contents" class="alaune version">
 <div id="alaune1"></div>
-<center>
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-2460407544523398";
-google_ad_slot = "4053045981";
-google_ad_width = 320;
-google_ad_height = 50;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center>
 <div id="alaune2"></div>
 <a onclick="loadplus1(this);return false;" href="/article-precedent.htm" class="news previous">Charger plus d'articles</a>
 </div>
@@ -84,6 +73,15 @@ function _eStat_Whap_loaded_func(){
  var s=document.getElementsByTagName('script')[0];
  s.parentNode.insertBefore(myscript,s);
 })();
+</script>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2460407544523398";
+google_ad_slot = "4053045981";
+google_ad_width = 320;
+google_ad_height = 50;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <script type="text/javascript" src="js/javascript.js"></script>
 </body>
