--- a/sources/index.htm
+++ b/sources/index.htm
@@ -6,13 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 <link rel="stylesheet" href="css/style.css">
-<script>
-function hideTB() {
-	if(!window.pageYOffset){window.scrollTo(0,1);}
-}
-</script>
 </head>
-<body onload="setTimeout(hideTB(),50);">
+<body>
 <a name="topheader"></a>
 <div id="container" style="margin-top:85px;">
 	<div id=ipub1 style="margin:0 auto; width:320px;">
@@ -54,34 +49,6 @@ document.getElementById('alaune2').innerHTML=txt2;
 <script type="text/javascript">
 document.getElementById('m1').className='active';
 document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-8810278-4']);
-_gaq.push(['_trackPageview']);
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-function _eStat_Whap_loaded_func(){
- eStatWhap.serial("800000207093");
- eStatWhap.send();
-}
-(function() {
- var myscript=document.createElement('script');
- myscript.src='http://w.estat.com/js/whap.js';
- myscript.setAttribute('async','true');
- var s=document.getElementsByTagName('script')[0];
- s.parentNode.insertBefore(myscript,s);
-})();
-</script>
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-2460407544523398";
-google_ad_slot = "4053045981";
-google_ad_width = 320;
-google_ad_height = 50;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <script type="text/javascript" src="js/javascript.js"></script>
 </body>
