--- a/sources/index.htm
+++ b/sources/index.htm
@@ -16,7 +16,7 @@
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:999;">
 		<a href="/menu.htm" class="button menu">Menu</a>
 		<a href="javascript:window.location.reload()" class="button reload"><img src="/images/bt-reload2.png" width=14 height=18 alt="" /></a>
-		<a href="/" class="logo"><img id=logo1 src="jembedocs/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
+		<a href="/" class="logo"></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:999; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="/">La Une</a></li>
@@ -35,7 +35,7 @@ var c1=[[20337,"Lyon imite le PSG - Débrief et NOTES des joueurs (Lyon 1-0 Beti
 var txt1='';
 var txt2='';
 for (var i=0, l1=c1.length; i<l1; i++ ) {
-	var txt0='<a href="/football/article-'+c1[i][0]+'.htm" class="news"><h1>'+c1[i][1]+'</h1><div class="picture"><img width=135 height=90 src="http://photo.maxifoot.fr/'+c1[i][3]+'1.jpg"></div><div class="chapeau">'+c1[i][2]+'</div></a>';
+	var txt0='<a href="/football/article-'+c1[i][0]+'.htm" class="news"><h1>'+c1[i][1]+'</h1><div class="picture"></div><div class="chapeau">'+c1[i][2]+'</div></a>';
 	if (i<0) { txt1+=txt0; } else { txt2+=txt0; }
 }
 document.getElementById('alaune1').innerHTML=txt1;
@@ -48,7 +48,6 @@ document.getElementById('alaune2').innerHTML=txt2;
 </div>
 <script type="text/javascript">
 document.getElementById('m1').className='active';
-document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
 </script>
 <script type="text/javascript" src="js/javascript.js"></script>
 </body>
