--- a/sources/index.htm
+++ b/sources/index.htm
@@ -15,7 +15,7 @@
 	</div></div>
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:999;">
 		<a href="/menu.htm" class="button menu">Menu</a>
-		<a href="javascript:window.location.reload()" class="button reload"><img src="/images/bt-reload2.png" width=14 height=18 alt="" /></a>
+		<a href="javascript:window.location.reload()" class="button reload"></a>
 		<a href="/" class="logo"></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:999; overflow:hidden; white-space:nowrap;">
