--- a/sources/index.htm
+++ b/sources/index.htm
@@ -1,10 +1,11 @@
 <html>
 <head>
-<meta charset="iso-8859-1">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<title>Maxifoot</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="jembe.js"></script>
 </head>
 <body>
 <a name="topheader"></a>
