--- a/sources/index.html
+++ b/sources/index.html
@@ -16,7 +16,7 @@
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:999;">
 		<a href="/menu.htm" class="button menu">Menu</a>
 		<a href="javascript:window.location.reload()" class="button reload"></a>
-		<a href="/" class="logo"></a>
+		<a href="/" class="logo"><img id=logo1 src="" alt="Maxifoot" width=102 height=38 /></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:999; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="/">La Une</a></li>
@@ -48,6 +48,7 @@ document.getElementById('alaune2').innerHTML=txt2;
 </div>
 <script type="text/javascript">
 document.getElementById('m1').className='active';
+document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
 </script>
 </body>
 </html>
