--- a/sources/index.html
+++ b/sources/index.html
@@ -15,8 +15,8 @@
 	</div></div>
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:999;">
 		<a href="/menu.htm" class="button menu">Menu</a>
-		<a href="javascript:window.location.reload()" class="button reload"></a>
-		<a href="/" class="logo"><img id=logo1 src="" alt="Maxifoot" width=102 height=38 /></a>
+		<a href="javascript:window.location.reload()" class="button reload"><img src="http://m.maxifoot.fr/images/bt-reload2.png" width=14 height=18 alt="" /></a>
+		<a href="/" class="logo"><img id=logo1 src="http://m.maxifoot.fr/images/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:999; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="/">La Une</a></li>
@@ -27,6 +27,17 @@
 	</ul>
 <div id="contents" class="alaune version">
 <div id="alaune1"></div>
+<center>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2460407544523398";
+google_ad_slot = "4053045981";
+google_ad_width = 320;
+google_ad_height = 50;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
 <div id="alaune2"></div>
 <a onclick="loadplus1(this);return false;" href="/article-precedent.htm" class="news previous">Charger plus d'articles</a>
 </div>
@@ -49,6 +60,14 @@ document.getElementById('alaune2').innerHTML=txt2;
 <script type="text/javascript">
 document.getElementById('m1').className='active';
 document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-8810278-4']);
+_gaq.push(['_trackPageview']);
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
 </script>
 </body>
 </html>
