--- a/sources/index.html
+++ b/sources/index.html
@@ -58,6 +58,7 @@ document.getElementById('alaune2').innerHTML=txt2;
 	</div>
 </div>
 <script type="text/javascript">
+document.write("type: " + jembe.internet.type);
 document.getElementById('m1').className='active';
 document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
 var _gaq = _gaq || [];
