--- a/sources/index.html
+++ b/sources/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="cbp-spmenu-push">
 <!-- // <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> // -->
-<div id=menu1>
+<div id=menu1 style="display:none">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left">
         <style>
         #contents li a { color:#fff; }
