--- a/sources/index.html
+++ b/sources/index.html
@@ -8,7 +8,7 @@
 <!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<script type="text/javascript" src="js/cbp.js"></script>
+<!-- //		<script type="text/javascript" src="js/cbp.js"></script> -->
 	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="cbp-spmenu-push">
@@ -40,7 +40,7 @@
 </div>
 <script>
 jQuery(document).ready(function($) {
-	$('.toggle-menu').jPushMenu();
+//	$('.toggle-menu').jPushMenu();
 });
 </script>
 <a name="topheader"></a>
@@ -53,8 +53,7 @@ jQuery(document).ready(function($) {
 		<a href="javascript:window.location.reload()" class="button reload"><img src="http://m.maxifoot.fr/images/bt-reload2.png" width=14 height=18 alt="" /></a>
 		<a href="/" class="logo"><img id=logo1 src="http://m.maxifoot.fr/images/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
 	</div>
-	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:990; overflow:hidden; 
-white-space:nowrap;">
+	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:990; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="#" onclick="goune();">La Une</a></li>
 		<li id=m2><a href="#" onclick="gobreves();">Brèves</a></li>
 		<li id=m3 style="padding:0 11px;"><a onclick="gopage('live');" href="#">Live</a></li>
