--- a/sources/index.html
+++ b/sources/index.html
@@ -39,9 +39,9 @@
 </nav>
 </div>
 <script>
-jQuery(document).ready(function($) {
+// jQuery(document).ready(function($) {
 //	$('.toggle-menu').jPushMenu();
-});
+// });
 </script>
 <a name="topheader"></a>
 <div id="container" style="margin-top:85px;">
