--- a/sources/index.html
+++ b/sources/index.html
@@ -6,9 +6,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 <!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
-	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
-<!-- //		<script type="text/javascript" src="js/cbp.js"></script> -->
+	<script type="text/javascript" src="http://stats.maxifoot.com/0_app_mobile/js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="http://stats.maxifoot.com/0_app_mobile/js/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/cbp.js"></script>
 	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="cbp-spmenu-push">
@@ -39,9 +39,9 @@
 </nav>
 </div>
 <script>
-// jQuery(document).ready(function($) {
-//	$('.toggle-menu').jPushMenu();
-// });
+jQuery(document).ready(function($) {
+	$('.toggle-menu').jPushMenu();
+});
 </script>
 <a name="topheader"></a>
 <div id="container" style="margin-top:85px;">
