--- a/sources/index.html
+++ b/sources/index.html
@@ -6,8 +6,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 <!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
-	<script type="text/javascript" src="http://stats.maxifoot.com/0_app_mobile/js/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="http://stats.maxifoot.com/0_app_mobile/js/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/cbp.js"></script>
 	<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
