--- a/sources/index.html
+++ b/sources/index.html
@@ -7,7 +7,7 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 <!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/cbp.js"></script>
 	<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
