--- a/sources/index.html
+++ b/sources/index.html
@@ -4,13 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<link href="css/style.css" type="text/css" rel="stylesheet" />
-<!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
-	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/cbp.js"></script>
-	<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
+<!-- // <script type="text/javascript" src="js/jembe.js"></script> -->
+        <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.min.js"></script> <!-- pour le slide d'un ecran a l'autre -->
+        <script type="text/javascript" src="js/iscroll-probe.js"></script> <!-- pour le scrolling vertical + le pull on refresh -->
+        <link href="css/iscroll.css" type="text/css" rel="stylesheet" />
+        <script type="text/javascript" src="js/cbp.js"></script> <!-- jPushMenu (a remplacer ...) -->
+        <link href="css/cbp.css" type="text/css" rel="stylesheet" />
+        <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script> <!-- pour le swipe (gesture), déclencher le passage d'un ecran a l'autre -->
 </head>
 <body class="cbp-spmenu-push">
 <!-- // <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> // -->
