--- a/sources/index.html
+++ b/sources/index.html
@@ -4,15 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link href="css/style.css" type="text/css" rel="stylesheet" />
-<!-- // <script type="text/javascript" src="js/jembe.js"></script> -->
-        <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="js/jquery-ui.min.js"></script> <!-- pour le slide d'un ecran a l'autre -->
-        <script type="text/javascript" src="js/iscroll-probe.js"></script> <!-- pour le scrolling vertical + le pull on refresh -->
-        <link href="css/iscroll.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="js/cbp.js"></script> <!-- jPushMenu (a remplacer ...) -->
-        <link href="css/cbp.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script> <!-- pour le swipe (gesture), déclencher le passage d'un ecran a l'autre -->
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
+<!-- //	<script type="text/javascript" src="js/jembe.js"></script> -->
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.min.js"></script> <!-- pour le slide d'un ecran a l'autre -->
+	<script type="text/javascript" src="js/iscroll-probe.js"></script> <!-- pour le scrolling vertical + le pull on refresh -->
+	<link href="css/iscroll.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="js/cbp.js"></script> <!-- jPushMenu (a remplacer ...) -->
+	<link href="css/cbp.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script> <!-- pour le swipe (gesture), déclencher le passage d'un ecran a l'autre -->
 </head>
 <body class="cbp-spmenu-push">
 <!-- // <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> // -->
@@ -42,9 +42,18 @@
 </nav>
 </div>
 <script>
-jQuery(document).ready(function($) {
-	$('.toggle-menu').jPushMenu();
-});
+jQuery(document).ready(function($) { $('.toggle-menu').jPushMenu(); } );
+var myScroll;
+var refresh1=0;
+function updatePosition() { if (this.y>40) { refresh1=1; } }
+function updatePosition2() { if (refresh1) { refresh1=0; alert('refresh'); } }
+function loaded() { // cubiq.org/iscroll-5-ready-for-beta-test / lab.cubiq.org/iscroll5/demos/probe/
+        $('#alaune1').height($(document).height()-85);
+        myScroll = new IScroll('.wrapper', { probeType:3, mouseWheel:true });
+        myScroll.on('scroll', updatePosition);
+        myScroll.on('scrollEnd', updatePosition2);
+}
+document.addEventListener('touchmove', function(e) { e.preventDefault(); }, false);
 </script>
 <a name="topheader"></a>
 <div id="container" style="margin-top:85px;">
@@ -65,7 +74,7 @@ jQuery(document).ready(function($) {
 	</ul>
 
 	<div id="contents_une" class="alaune version">
-		<div id="alaune1"></div>
+		<div id="alaune1"><div class=wrapper><div id="scroller"></div></div></div>
 		<script type="text/javascript"><!--
 		google_ad_client = "ca-pub-2460407544523398";
 		google_ad_slot = "4053045981";
@@ -77,7 +86,7 @@ jQuery(document).ready(function($) {
 		<a onclick="loadplus1(this);return false;" href="/article-precedent.htm" class="news previous">Charger plus d'articles</a>
 	</div>
 
-	<div id="contents_art" class="article">
+	<div id="contents_art" class="article" style="display:none;">
 		<div id="topart"></div>
 		<div id="cmtbfmf"></div>
 		<script type="text/javascript"><!--
@@ -126,7 +135,7 @@ jQuery(document).ready(function($) {
 		</ul>
 		</div>
 	</div>
-        <div class="footer">
+        <div class="footer" style="display:none;">
                 <a href="#topheader" class="topPage">Haut de page</a>
                 <a href="/maxifoot-version-www.php" class="versionWeb">version web classique</a>
         </div>
@@ -149,7 +158,8 @@ for (var i=0, l1=c1.length; i<l1; i++ ) {
 }
 
 // document.getElementById('alaune1').innerHTML=txt1;
-document.getElementById('alaune2').innerHTML='<ul>'+txt2+'</ul>';
+// document.getElementById('alaune2').innerHTML='<ul>'+txt2+'</ul>';
+$('#scroller').html('<div class=hook>Relachez pour actualiser les articles<br>Dernière actualisation: 10h02</div><ul>'+txt2+'</ul><a onclick="loadplus1(this);return false;" href="/article-precedent.htm" class="news previous">Charger plus d\'articles</a>');
 var viewc1='une';
 var firstart1=1;
 function goart(ida) {
@@ -205,31 +215,20 @@ for (var i=0, l1=c1.length; i<l1; i++ ) {
 	var txt0='<li id="news'+c1[i][0]+'_'+c1[i][1]+'" class="gonews"><span class="hour">'+c1[i][1]+'</span><span class="title">'+c1[i][2]+'</span></li>';
 	if (i<0) { txt1+=txt0; } else { txt2+=txt0; }
 }
-document.getElementById('breves1').innerHTML=txt1+'</ul>';
+// document.getElementById('breves1').innerHTML=txt1+'</ul>';
 document.getElementById('breves2').innerHTML=txt2+'</ul>';
-
 $(function() {      
       //Enable swiping...
-      $("li.goart").swipe( {
+	$("li.goart").swipe( {
         //Generic swipe handler for all directions
   	    tap:function(event, target) {
 			goart($(this).attr('id').replace('art',''));
 		},
-	        swipeLeft:function() {
+	    swipeLeft:function(event, direction, distance, duration, fingerCount) { // labs.rampinteractive.co.uk/touchSwipe/demos/Basic_swipe.html
 			 gobreves();
         	},
-        	//Default is 75px, set to 0 for demo so any distance triggers swipe
-        	threshold:20
-      });
-	$('#contents_une').swipe( {
-		swipeDown:function(event, direction, distance, duration, fingerCount) {
-			var pos1=$('#contents_une').offset().top-$(window).scrollTop();
-			if (pos1>80) { 
-				$('#alaune1').html('<div id=reload1 style="width:100%;height:30px;background:#999;">reload</div>');
-				setTimeout(function() { $('#reload1').hide(); },2000);
-			}
-		},
-		threshold:20
+            // Default is 75px, set to 0 for demo so any distance triggers swipe
+            threshold:50 
 	});
 	$('li.gonews').swipe( {
 		swipeRight:function() {
@@ -254,6 +253,7 @@ function affpub() {
   s.parentNode.insertBefore(ga, s);
 }
 // affpub();
+loaded();
 </script>
 </body>
 </html>
