--- a/sources/index.html
+++ b/sources/index.html
@@ -62,8 +62,8 @@ document.addEventListener('touchmove', function(e) { e.preventDefault(); }, fals
 	</div>
 	<div id="header" style="display:block; width:100%; position:fixed; top:0px; z-index:990;">
 		<a href="#" class="toggle-menu menu-left button menu">Menu</a>
-		<a href="javascript:window.location.reload()" class="button reload"><img src="http://m.maxifoot.fr/images/bt-reload2.png" width=14 height=18 alt="" /></a>
-		<a href="/" class="logo"><img id=logo1 src="http://m.maxifoot.fr/images/logo-maxifoot3.gif" alt="Maxifoot" width=102 height=38 /></a>
+		<a href="javascript:window.location.reload()" class="button reload"><img src="images/bt-reload2.png" width=14 height=18 alt="" /></a>
+		<a href="/" class="logo"><img id=logo1 src="images/logo-maxifoot-big.png" alt="Maxifoot" width=102 height=38 /></a>
 	</div>
 	<ul id="navigation" style="display:block; width:100%; position:fixed; top:42px; z-index:990; overflow:hidden; white-space:nowrap;">
 		<li id=m1><a href="#" onclick="goune();">La Une</a></li>
@@ -104,9 +104,9 @@ document.addEventListener('touchmove', function(e) { e.preventDefault(); }, fals
 	<div id="contents_live" style="display:none;">
 		<div class="sousNavigation">
                 <center>
-                <a href="page1.htm?d=-1" class="button left"><img src="http://m.maxifoot.fr/images/bt-left.png" alt=""/></a>
+                <a href="page1.htm?d=-1" class="button left"><img src="images/bt-left.png" alt=""/></a>
                 <span class="date">Mer. 04 Décembre</span>
-                <a href="page1.htm?d=1" class="button right"><img src="http://m.maxifoot.fr/images/bt-right.png" alt=""/></a>
+                <a href="page1.htm?d=1" class="button right"><img src="images/bt-right.png" alt=""/></a>
                 </center>
 	        </div>
 		<div class="live1">
@@ -242,16 +242,6 @@ $(function() {
 <script type="text/javascript"> 
 // document.write("type: " + jembe.internet.type);
 // document.getElementById('m1').className='active';
-// document.getElementById('logo1').src='http://m.maxifoot.fr/images/logo-maxifoot-big.png';
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-8810278-7']);
-_gaq.push(['_trackPageview']);
-function affpub() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0];
-  s.parentNode.insertBefore(ga, s);
-}
 // affpub();
 loaded();
 </script>
